--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=Tracker
+
+spring.datasource.url=jdbc:h2:mem:faiz
+spring.datasource.ClassName=org.h2.Driver
+spring.datasource.sql-show=true
+spring.jpa.defer-datasource-initialization=true
