--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.url=jdbc:h2:mem:faiz
 spring.datasource.ClassName=org.h2.Driver
 spring.datasource.sql-show=true
 spring.jpa.defer-datasource-initialization=true
+supabase.projectUrl=${SUPABASE_PROJECT_URL}
+supabase.issuer=${SUPABASE_ISSUER}
+supabase.jwksUrl=${SUPABASE_JWKS_URL}
