--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,21 @@
 spring.application.name=Tracker
-
+server.port=8080
+# --- Database (H2 in-memory) ---
 spring.datasource.url=jdbc:h2:mem:faiz
-spring.datasource.ClassName=org.h2.Driver
-spring.datasource.sql-show=true
+spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql=true
+
+# --- Supabase JWT Configuration ---
 supabase.projectUrl=${SUPABASE_PROJECT_URL}
 supabase.issuer=${SUPABASE_ISSUER}
 supabase.jwksUrl=${SUPABASE_JWKS_URL}
+
+# --- Actuator Configuration ---
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.probes.enabled=true
+management.endpoint.health.show-details=always
+management.endpoints.web.base-path=/actuator
+management.server.port=${server.port}
+management.endpoints.web.cors.allowed-origins=*
+management.endpoints.web.cors.allowed-methods=GET,POST,OPTIONS
