Fix 401 Issue at Frontend
Backend can verify Supabase tokens without needing the JWT secret

Works with Lovable Cloud managed Supabase

Authentication works end-to-end with your frontend

All existing functionality maintained

----

The problem:

The backend user JWT secret verification (HS256) and required SUPABASE_JWT_SECRET.

the JWT secret isn't exposed in Loveable Cloud managed supabase.

The app failed to start because the secret was missing and tokens couldn't be verified.

----

The solution:

Switched from direct JWT verification to token introspection: verify tokens by calling Supabase's /auth/v1/user endpoint.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,12 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
 
-# --- Supabase JWT Configuration ---
+# --- Supabase Configuration ---
+# Token introspection via Supabase API (no JWT secret needed)
 supabase.projectUrl=${SUPABASE_PROJECT_URL}
 supabase.issuer=${SUPABASE_ISSUER}
-supabase.jwksUrl=${SUPABASE_JWKS_URL}
+# Supabase Anon Key for API calls (used in apikey header)
+supabase.anon-key=${SUPABASE_ANON_KEY}
 
 # --- Actuator Configuration ---
 management.endpoints.web.exposure.include=health,info
