--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ server.port=8080
 # --- Database (H2 in-memory) ---
 spring.datasource.url=jdbc:h2:mem:faiz
 spring.datasource.driver-class-name=org.h2.Driver
+spring.h2.console.enabled=true
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
 
@@ -20,6 +21,7 @@ server.port=8080
 # --- Database (H2 in-memory) ---
 spring.datasource.url=jdbc:h2:mem:faiz
 spring.datasource.driver-class-name=org.h2.Driver
+spring.h2.console.enabled=true
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
 
